WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54677
REGRESSION (WebKit2): Wrong frame printed on tivofaq.com
https://bugs.webkit.org/show_bug.cgi?id=54677
Summary
REGRESSION (WebKit2): Wrong frame printed on tivofaq.com
Alexey Proskuryakov
Reported
2011-02-17 11:38:41 PST
We're choosing the largest frame for printing - but TOC is very tall on this site, so its area is larger than area of content frame. Should use visible bounds, not frame size, as WK1 does. <
rdar://problem/8994133
>
Attachments
proposed fix
(1.70 KB, patch)
2011-02-17 11:43 PST
,
Alexey Proskuryakov
adele
: review+
ap
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-02-17 11:43:55 PST
Created
attachment 82838
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2011-02-18 10:01:28 PST
Committed in <
http://trac.webkit.org/changeset/79008
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug