        Reviewed by Adele Peterson.

REGRESSION (WebKit2): Wrong frame printed on tivofaq.com
        https://bugs.webkit.org/show_bug.cgi?id=54677
        <rdar://problem/8994133>

        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        (WebKit::area): Use visible frame bounds.
        (WebKit::findLargestFrameInFrameSet): Added a comment explaining what we're up to here.
        WebKit2 shouldn't be making policy decisions for the client, but it gets dangerously close
        to that. We used to expose the same as WK1 API though.



Canonical link: https://commits.webkit.org/68963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79008 268f45cc-cd09-0410-ab3c-d52691b4dbfc